--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,5 +10,17 @@
                 <p class="text-secondary">{{ user.email }}</p>
             </div>
         </div>
+
+        <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Profile Information</legend>
+                {{ profile_update_form|crispy }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-info" type="submit">Update Profile</button>
+                </div>
+            </form>
+
     </div>
 {% endblock content%}
