--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-    <!-- Add Navigation Bar-->
+    <!-- Navbar left side-->
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
@@ -38,8 +38,9 @@
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {%if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
-                        <a class="nav-item nav-link" href="{% url 'logout' %}">Log out</a>
+                            <a class="nav-item nav-link" href="{% url 'post_create' %}">New Post</a>
+                            <a class="nav-item nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
+                            <a class="nav-item nav-link" href="{% url 'logout' %}">Log out</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                             <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
