--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/base_viewing_post.html' %}
 {% block content %}
     <article class="media content-section">
       <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
       <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="#">{{ object.author }}</a>
+            <a class="mr-2" href="{% url 'user-profile' post.author.username %}">{{ object.author }}</a>
             <small class="text-muted">{{ object.date_posted|date:'d M Y, H:i' }}</small>
 
         </div>
