--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -1,17 +1,29 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-  {% for post in object_list%}
-    <article class="media content-section">
-      <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
-      <div class="media-body">
-        <div class="article-metadata">
-          <a class="mr-2" href="{% url 'user-profile' post.author.username %}">{{ post.author }}</a>
-          <small class="text-muted">{{ post.date_posted|date:'d M Y, H:i' }}</small>
+
+    <div class="mb-3">
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="profile picture">
+            <div class="media-body">
+                <h2 class="account-heading">{{ user.username }}</h2>
+                <p class="text-secondary">{{ user.email }}</p>
+            </div>
         </div>
-        <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-        <p class="article-content">{{ post.content }}</p>
-      </div>
-    </article>
+    </div>
+    <hr>
+    <h2 class="muted">{{ user.username }}'s Posts ()</h2>
+  {% for post in object_list%}
+    
+        <article class="media content-section">
+          <div class="media-body">
+            <div class="article-metadata">
+              <small class="text-muted">{{ post.date_posted|date:'d M Y, H:i' }}</small>
+            </div>
+            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content }}</p>
+          </div>
+        </article>
+    
   {% endfor %}
     {% if is_paginated %}
         <div class="pagination-bar">
@@ -19,7 +31,7 @@
                 <a href="?page=1" class="btn btn-outline-info mb-4">First</a>
                 <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-outline-info mb-4">Previous</a>
             {% endif %}
-    
+
             {% for num in page_obj.paginator.page_range %}
                 {% if page_obj.number == num %}
                     <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
@@ -27,7 +39,7 @@
                     <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
                 {% endif %}
             {% endfor %}
-    
+
             {% if page_obj.has_next %}
                 <a href="?page={{ page_obj.next_page_number }}" class="btn btn-outline-info mb-4">Next</a>
                 <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-outline-info mb-4">Last</a>
