--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -39,7 +39,7 @@
                     <div class="navbar-nav">
                         {%if user.is_authenticated %}
                             <a class="nav-item nav-link" href="{% url 'post_create' %}">New Post</a>
-                            <a class="nav-item nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
+                            <a class="nav-item nav-link" href="{% url 'user-profile' request.user.username  %}">{{ request.user.username }}</a>
                             <a class="nav-item nav-link" href="{% url 'logout' %}">Log out</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
