--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -14,7 +14,7 @@
         <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Profile Information</legend>
+                    <legend class="border-bottom mb-4">Edit Profile Information</legend>
                 {{ profile_update_form|crispy }}
                 </fieldset>
                 <div class="form-group">
